--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "files.associations": {
         "atomic": "cpp",
-        "limits": "cpp"
     },
-    "C_Cpp.default.compilerPath": "/usr/bin/clang++-14"
+    // "C_Cpp.default.compilerPath": "/usr/bin/clang++-14"
 }
