use unique_ptr to new node

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
-# 创建一个静态库
-add_library(lockfreeskiplist INTERFACE)
+add_library(skiplist INTERFACE)
+add_library(lockfreeskiplist INTERFACE)  # 这一行是新添加的
 
-# 设定其包含的目录，这样其他目标(例如测试)可以找到头文件
-target_include_directories(lockfreeskiplist INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+# 这一行适用于两个库，因为它们都在同一个目录中
+target_include_directories(skiplist INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(lockfreeskiplist INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})  # 这一行是新添加的
