--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,10 +5,12 @@ set(GTEST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../third_party/googletest)
 add_subdirectory(${GTEST_ROOT} googletest)
 
 # 添加测试可执行文件
-add_executable(tests LockFreeSkipListTests.cpp)
+add_executable(lock_free_tests LockFreeSkipListTests.cpp)
+add_executable(tests SkipListTests.cpp)
 
 # 链接测试可执行文件到我们的库和GoogleTest
-target_link_libraries(tests lockfreeskiplist gtest_main)
+target_link_libraries(tests skiplist gtest_main)
+target_link_libraries(lock_free_tests lockfreeskiplist gtest_main)
 
 # 添加测试
 enable_testing()
